<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/menuMyPosted"
        android:icon="@drawable/ic_question"
        android:title="@string/my_post"/>

    <item
        android:id="@+id/menuFavorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>

    <item android:title="Autres">

        <menu>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuHelpCenter"
                android:icon="@drawable/ic_help"
                android:title="@string/help_center"/>

            <item
                android:id="@+id/menuLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>