<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appinterface.Post_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_second"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="23sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/category_input"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/key_word_input"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/image_input"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:layout_width="378dp"
                android:layout_height="188dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/post_input" />


        </LinearLayout>

        <Button
            android:layout_width="230dp"
            android:layout_height="57dp"
            android:layout_marginTop="4dp"
            android:text="@string/post_btn_txt"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>