<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appinterface.Response_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_second"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="23sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="17dp" />

        <EditText
            android:layout_width="352dp"
            android:layout_height="121dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/input_respones_hint"
            android:enabled="true"
            android:gravity="start|top"
            android:inputType="textLongMessage|textAutoCorrect|textWebEditText|textMultiLine"
            android:isScrollContainer="true"
            android:keepScreenOn="false"
            android:orientation="horizontal"
            android:singleLine="false"
            android:labelFor="@id/title"
            android:autofillHints="@string/app_name"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_response_txt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>