<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".authentification.Reset_Password_Activity">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:srcCompat="@drawable/forum2"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass_title"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:ems="15"
        android:hint="@string/input_email_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text="@string/btn_send_txt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text="@string/btn_exit_txt"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>